--- a/styles/Intro.module.css
+++ b/styles/Intro.module.css
@@ -5,6 +5,7 @@
   overflow: hidden;
   position: relative;
 }
+
 .card {
   flex: 1;
   padding: 100px;
@@ -14,17 +15,41 @@
   justify-content: space-around;
   position: relative;
 }
+
+.circle {
+  width: 100vh;
+  height: 100vh;
+  border-radius: 50%;
+  opacity: 0.1;
+  position: absolute;
+  z-index: 999;
+}
+
+.circle1 {
+  background-color: #01c686;
+  right: -40vh;
+}
+
+.circle2 {
+  background-color: #b0ff49;
+  left: -50vh;
+  top: -50vh;
+}
+
 .title {
   font-size: 50px;
   margin: 0;
 }
+
 .brandName {
   color: green;
 }
+
 .desc {
   font-size: 20px;
   margin: 0;
 }
+
 .button {
   border: none;
   background-color: green;
@@ -32,10 +57,11 @@
   font-weight: bold;
   padding: 20px;
   border-radius: 10px;
-  /* width: 100px; */
+  width: 100px;
   cursor: pointer;
   animation: button 1s ease infinite alternate;
 }
+
 @keyframes button {
   to {
     background-color: rgb(2, 63, 2);
