--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -3,18 +3,71 @@
   background-color: black;
   color: white;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 0 100px;
+  justify-content: space-between;
+  font-size: 18px;
+  padding: 0px 100px;
+  position: relative;
+  overflow: hidden;
 }
 
-.list {
-  /* display: flex; */
-  list-style: none;
-}
 .listItem {
   display: inline;
   margin-right: 30px;
   font-size: 14px;
+  /* font-weight: 300; */
   color: lightgray;
+  cursor: pointer;
+}
+
+.hamburger {
+  display: none;
+  width: 25px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.line {
+  width: 100%;
+  height: 3px;
+  background-color: white;
+}
+
+.menu {
+  display: none;
+  position: fixed;
+  width: 50vw;
+  height: calc(100vh - 50px);
+  background-color: rgba(0, 0, 0, 0.911);
+  top: 50px;
+  z-index: 9999;
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+  color: lightgray;
+  list-style: none;
+  transition: all 1s ease;
+}
+@media screen and (max-width: 480px) {
+  .container {
+    padding: 0px 20px;
+  }
+
+  .listItem {
+    display: none;
+  }
+
+  .hamburger {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .menu {
+    display: flex;
+    flex-direction: column;
+    /* gap: 20px; */
+    align-items: center;
+    justify-content: space-around;
+  }
 }
