--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -34,3 +34,42 @@
   margin-top: 50px;
   cursor: pointer;
 }
+@media screen and (max-width: 480px) {
+  .container {
+    flex-direction: column-reverse;
+    padding: 20px;
+  }
+
+  .title {
+    font-size: 50px;
+  }
+
+  .imgContainer {
+    width: 90%;
+    /* height: 300px; */
+  }
+
+  .cardS {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .button {
+    margin: 20px 0px;
+  }
+
+  .imgContainer {
+    border-radius: 50%;
+    overflow: hidden;
+  }
+
+  .cardL::before {
+    content: "Projects";
+    font-size: 50px;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+}
