--- a/styles/Testimonials.module.css
+++ b/styles/Testimonials.module.css
@@ -45,3 +45,26 @@
 .jobTitle {
   font-size: 14px;
 }
+
+@media screen and (max-width: 480px) {
+  .container {
+    height: auto;
+    padding: 20px;
+  }
+  .wrapper {
+    align-items: center;
+    justify-content: center;
+  }
+  .card {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+  .title {
+    margin-bottom: 40px;
+    font-size: 50px;
+  }
+}
