--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,3 +24,8 @@ a {
   background-color: green;
   margin: auto;
 }
+@media screen and (max-width: 480px) {
+  .circle {
+    display: none;
+  }
+}
